peac_dev/force-app/main/default/objects/FieldTrackingForLoan__mdt/FieldTrackingForLoan__mdt.object-meta.xml
<CustomObject>
    <label>FieldTrackingForLoan</label>
    <pluralLabel>FieldTrackingForLoan</pluralLabel>
</CustomObject>