peac_dev/force-app/main/default/objects/FieldTrackingForLoan__mdt/fields/ChildObject_RelationshipName__c.field-meta.xml
<CustomField>
    <fullName>ChildObject_RelationshipName__c</fullName>
    <label>ChildObject RelationshipName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>