peac_dev/force-app/main/default/objects/FieldTrackingForLoan__mdt/fields/FieldNames__c.field-meta.xml
<CustomField>
    <fullName>FieldNames__c</fullName>
    <label>FieldNames</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>