peac_dev/force-app/main/default/objects/FieldTrackingForLoan__mdt/fields/GDS_Fields__c.field-meta.xml
<CustomField>
    <fullName>GDS_Fields__c</fullName>
    <label>GDS Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>