peac_dev/force-app/main/default/objects/FieldTrackingForLoan__mdt/fields/If_Parent__c.field-meta.xml
<CustomField>
    <fullName>If_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If Parent</label>
    <type>Checkbox</type>
</CustomField>