peac_dev/force-app/main/default/objects/FieldTrackingForLoan__mdt/fields/Is_ChildObject__c.field-meta.xml
<CustomField>
    <fullName>Is_ChildObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ChildObject</label>
    <type>Checkbox</type>
</CustomField>