peac_dev/force-app/main/default/objects/FieldTrackingForLoan__mdt/fields/Junction_Object__c.field-meta.xml
<CustomField>
    <fullName>Junction_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Junction Object</label>
    <type>Checkbox</type>
</CustomField>