peac_dev/force-app/main/default/objects/FieldTrackingForLoan__mdt/fields/Lookup_To_Opportunity_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_To_Opportunity_Field__c</fullName>
    <label>Lookup To Opportunity Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>