peac_dev/force-app/main/default/objects/FieldTrackingForLoan__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>TextArea</type>
</CustomField>